<resources>
    <string name="app_name">Digi Mbanking</string>
    <string name="beranda">Beranda</string>
    <string name="akun">Akun</string>
    <string name="riwayat">Riwayat</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visual_card">Visual Card</string>
    <string name="pilih_kartu">Pilih kartu untuk melihat transaksi kartu Anda</string>
    <string name="silver">Silver</string>
    <string name="xxxxxxxx">xxxxxxxx</string>
    <string name="limit_transfer_5_juta">Limit transfer: 5 juta </string>
    <string name="debit">Debit</string>
    <string name="gold">Gold</string>
    <string name="limit_transfer_10_juta">Limit transfer: 10 juta </string>
    <string name="limit_transfer_15_juta">Limit transfer: 15 juta </string>
    <string name="title_activity_kata_sandi">KataSandi</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="informasi_data_diri">Informasi Data Diri</string>
    <string name="informasi">Masukkan alamat email untuk proses pembuatan akun.</string>
    <string name="kata_sandi">Masukkan informasi mengenai kata sandi akun mobile banking.</string>
    <string name="informasi_nik">Masukkan informasi NIK untuk proses pembuatan akun.</string>
    <string name="beranda_fragment">Beranda Fragment</string>
    <string name="verifikasi_kode_otp_email">Verifikasi Kode OTP Email</string>
    <string name="mpin">Untuk keamanan dalam bertransaksi silahkan masukkan 6 digit MPIN</string>
    <string name="masukan_data_diri">Masukkan informasi data diri untuk melengkapi proses pembuatan akun.</string>
    <string name="konf_mpin">Untuk melanjutkan, mohon konfirmasi MPIN sebelumnya</string>
    <string name="selamat_nomor_rekening_berhasil_dibuat">Selamat! Nomor Rekening Berhasil Dibuat</string>
    <string name="nomor_rekening_sudah_dapat_digunakan">Nomor Rekening sudah dapat digunakan</string>
    <string name="retry">Coba lagi</string>
    <string name="content_description_scroll_top">auto scroll to top</string>
    <string name="akun_saya">Akun Saya</string>
    <string name="akunNavbarCustomFont">Akun</string>
    <string name="berandaNavbarCustomFont">Beranda</string>
    <string name="profilNavbarCustomFont">Profil</string>
    <string name="mpin_baru">Untuk keamanan dalam bertransaksi silakan masukkan 6 digit MPIN</string>
    <string name="mpin_konf">Untuk melanjutkan, mohon konfirmasi MPIN sebelumnya</string>
</resources>