<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_beranda"
        android:icon="@drawable/ic_beranda"
        android:title="@string/beranda"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/nav_akun"
        android:icon="@drawable/ic_akun"
        android:title="@string/akun"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/nav_riwayat"
        android:icon="@drawable/ic_riwayat"
        android:title="@string/riwayat"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/nav_profil"
        android:icon="@drawable/ic_profil"
        android:title="@string/profil"
        app:showAsAction="always"
        />
</menu>