<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white_primary"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardAccountSilver"
        android:layout_width="347dp"
        android:layout_height="0dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtJenisKartu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/silver"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtNomorRekening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/xxxxxxxx"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/txtLimit5"
                app:layout_constraintTop_toBottomOf="@+id/txtJenisKartu" />

            <TextView
                android:id="@+id/txtLimit5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins"
                android:text="@string/limit_transfer_5_juta"
                android:textSize="11sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNomorRekening" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvBgCard"
                android:layout_width="115dp"
                android:layout_height="172dp"
                app:cardBackgroundColor="#BBBBBB"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivBgCardJenisKartu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/bg_card_silver" />

                    <TextView
                        android:id="@+id/txtDebit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="34dp"
                        android:layout_marginEnd="60dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/debit"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgKotak"
                        android:layout_width="42.78dp"
                        android:layout_height="26dp"
                        android:layout_marginStart="18dp"
                        android:layout_marginTop="65dp"
                        android:layout_marginEnd="54dp"
                        android:src="@drawable/kotak"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imgLogoBank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="72dp"
                        android:layout_marginTop="124dp"
                        android:layout_marginEnd="19dp"
                        android:src="@drawable/gpn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>